# review-agent

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  README.md  SECURITY.md  action.yml  review-agent.toml
.github/workflows/: ci.yml  nightly-smoke.yml  release.yml  review-agent.yml
prompts/: review_system.txt  review_user.txt
src/: config.rs  diff.rs  engine.rs  error.rs  language.rs  lib.rs  logging.rs  main.rs  sensitive.rs  tokens.rs
src/ai/: mod.rs  types.rs
src/github/: mod.rs  types.rs
src/mcp/: mod.rs  tools.rs  types.rs
src/server/: mod.rs
src/services/: diff_service.rs  github_service.rs  mod.rs  prompt_builder.rs  sanitize.rs
src/tools/: mod.rs  review.rs
tests/: integration_test.rs
